# python-project-template

./: .env.sample  .pre-commit-config.yaml  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/getting_started/: installation.md
python_project_template/: main.py  settings.py
src/: __init__.py  logger.py  settings.py
tests/: settings_test.py  test_sample.py
tests/core/: logger_test.py  settings_test.py  version_reader_test.py
