[tool.poetry]
name = "python-project-template"
version = "0.0.1"
description = "Description."
license = "MIT"
authors = ["Author <author@author.com>"]
readme = "README.md"
exclude = [
    "docs/*",
    "tests/*",
]


[tool.poetry.dependencies]
python = ">=3.10.1,<4.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.285"
mypy = "^1.8.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.2"


[tool.poetry.group.docs]
optional = true


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 122
target-version = "py310"
# All options here: https://github.com/charliermarsh/ruff#supported-rules
select = [
    "E",
    "W",
    "F",
    "Q",
    "S",
    "UP",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "SIM",
]


[tool.ruff.per-file-ignores]
"**/tests/*" = ["S101"]
"*init*.py" = ["F401"]


[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true


[tool.ruff.pylint]
max-args = 8
max-branches = 25
max-returns = 9
max-statements = 30


[tool.isort]
profile = "black"
line_length=122
multi_line_output=3
use_parentheses=true
include_trailing_comma=true
lines_between_types=1


[tool.mypy]
warn_no_return = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false
allow_redefinition = true
pretty = true
follow_imports="silent"
ignore_missing_imports = true
show_error_codes = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests/"]
filterwarnings = [
    "ignore",
    "default:::mymodule",
]


[tool.coverage.paths]
source = ["cendiant_inspection/"]
